--- a/src/components/navMenu/index.css
+++ b/src/components/navMenu/index.css
@@ -6,3 +6,7 @@
 .navbar .navbar-brand  img {
     width: 120px;
 }
+
+.navbar-expand-lg .navbar-nav .dropdown-menu {
+    z-index: 999 !important;
+}
