--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -12,6 +12,8 @@
     --label-login-ws: #cacaca;
     --input-login-ws: #ebebeb;
     --button-login-ws: #4277e9;
+
+    --tabs-ws: rgba(218, 218, 218, 0.507);
 }
 
 
@@ -39,13 +41,17 @@ body {
     width: 100%;
     height: 100%;
     background-color: var(--white-ws);
-    color: var(--white-ws);
     margin-top: -50px;
     margin-bottom: 20px;
-    padding: 50px 0px;
+    padding-top: 20px;
+    padding-bottom: 50px;
     border-radius: 8px;
     box-shadow: 0px 0px 25px var(--darklight-ws);    
     z-index: 1;
+}
+
+.active-tab {
+    display: block !important;
 }
 
 .owl-theme {
