--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -10,7 +10,7 @@
 
     --form-ws: #f7f7f7;
     --label-login-ws: #cacaca;
-    --input-login-ws: #ebebeb;
+    --input-border-ws: #607d8b;
     --button-login-ws: #4277e9;
 
     --tabs-ws: rgba(218, 218, 218, 0.507);
